Renamed 'Spatial mean' task to 'Regional mean' to better distinguish from the 'Coherence' task

--- a/notebooks/plotting_coherence.ipynb
+++ b/notebooks/plotting_coherence.ipynb
@@ -283,7 +283,7 @@
     "pcat_df = pcat.df\n",
     "\n",
     "# Load shapefile and get region order (south to north)\n",
-    "gdf = gpd.read_file(\"../\" + CONFIG[\"spatial_mean\"][\"region\"][\"shape\"])\n",
+    "gdf = gpd.read_file(\"../\" + CONFIG[\"regional_mean\"][\"region\"][\"shape\"])\n",
     "gdf[\"centroid_y\"] = gdf.geometry.centroid.y\n",
     "REGION_ORDER = gdf.sort_values(\"centroid_y\")[\"name\"].tolist()\n",
     "\n",
