--- a/notebooks/plotting_performance.ipynb
+++ b/notebooks/plotting_performance.ipynb
@@ -445,7 +445,7 @@
     "}\n",
     "\n",
     "# Load region shapefile\n",
-    "gdf = gpd.read_file(\"../\"+CONFIG[\"spatial_mean\"][\"region\"][\"shape\"])\n",
+    "gdf = gpd.read_file(\"../\"+CONFIG[\"regional_mean\"][\"region\"][\"shape\"])\n",
     "region_feature = ShapelyFeature(\n",
     "    gdf.geometry,\n",
     "    ccrs.PlateCarree(),\n",
