--- a/notebooks/plotting_regional_means_bars.ipynb
+++ b/notebooks/plotting_regional_means_bars.ipynb
@@ -108,7 +108,7 @@
     "}\n",
     "\n",
     "# Load shapefile and compute centroids\n",
-    "gdf = gpd.read_file(\"../\" + CONFIG[\"spatial_mean\"][\"region\"][\"shape\"])\n",
+    "gdf = gpd.read_file(\"../\" + CONFIG[\"regional_mean\"][\"region\"][\"shape\"])\n",
     "gdf[\"centroid\"] = gdf.geometry.centroid\n",
     "gdf[\"centroid_x\"] = gdf[\"centroid\"].x\n",
     "gdf[\"centroid_y\"] = gdf[\"centroid\"].y\n",
@@ -116,9 +116,9 @@
     "# Choose sort direction (East-West or North-South)\n",
     "REGION_ORDER = gdf.sort_values(\"centroid_y\")[\"name\"].tolist()  # or use \"centroid_x\"\n",
     "\n",
-    "# Get list of spatial_mean variables\n",
+    "# Get list of regional_mean variables\n",
     "df = pcat.df\n",
-    "df = df[df[\"processing_level\"] == \"spatial_mean\"]\n",
+    "df = df[df[\"processing_level\"] == \"regional_mean\"]\n",
     "variables = sorted({v for group in df[\"variable\"].unique() for v in group})\n",
     "\n",
     "# =========================\n",
@@ -127,7 +127,7 @@
     "for var in variables:\n",
     "    print(f\"Processing: {var}\")\n",
     "    try:\n",
-    "        ds_all = pcat.search(processing_level=\"spatial_mean\", variable=var).to_dataset().compute()\n",
+    "        ds_all = pcat.search(processing_level=\"regional_mean\", variable=var).to_dataset().compute()\n",
     "    except Exception as e:\n",
     "        print(f\"Failed to load dataset for {var}: {e}\")\n",
     "        continue\n",
